--- a/html/example.html
+++ b/html/example.html
@@ -85,9 +85,9 @@
                 </div>
             </div>
             <div id="story" class="underline">
-                2051年の恐山、夢のイタコの夢の中、たぶん嘘の四方山話。
-                盆の霊山に急降臨した様子の<wbr>可笑しい稀代の作家がなんと、物語をおかしくしている。
-                しかし、山ごとフェイクの<wbr>その中腹にも、見つかるべき何かがあるかもしれない、と噂に聞いた。
+                2051年の恐山、夢のイタコの夢の中、<wbr>たぶん嘘の四方山話。
+                盆の霊山に急降臨した様子の<wbr>可笑しい稀代の作家がなんと、<wbr>物語をおかしくしている。<wbr>
+                しかし、山ごとフェイクの<wbr>その中腹にも、見つかるべき<wbr>何かがあるかもしれない、<wbr>と噂に聞いた。
             </div>
 
             <div id="cast" class="underline">
